Fix scrollbars issue and footer

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -37,10 +37,14 @@
 		overflow-y: auto
 
 	.footer
+		min-height: 80px
 		flex: 0 1 50px
 
 		text-align: center
 
 		a
-			padding: 20px
+			padding-left: 20px
+			padding-right: 20px
 
+			img
+				padding-top: 10px
