--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 html, body, app-root
 	background-color: black
-	height: 100%
+	height: 98%
 	margin: 0
 	color: white
